--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "Computer Vision Researcher"
   location         : "Chennai, India"
-  employer         : "Robert Bosche Centre for Data Science & AI"
+  employer         : "RBCDSAI, IIT-M"
   uri              : # URL
   email            : "adithya.lenka@gmail.com" 
 
@@ -87,7 +87,7 @@ publication_category:
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
-future                   : true
+future                   : false
 read_more                : "disabled" # if enabled, adds "Read more" links to excerpts
 talkmap_link             : false #change to true to add link to talkmap on talks page
 comments:
